# c-study

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
day01/: CMakeLists.txt  Demo1.c  HelloWorld.c
day02/: HelloWorld.c
src/day01/: HelloWorld.c  a.c
src/day02/: ConstDemo.c  Constant.c  DefineDemo.c  Enum.c  PrintfDemo.c  ScanfDemo1.c  ScanfDemo2.c  ScanfDemo3.c  VaiableDemo1.c  VaiableDemo3.c  VariableDemo1.c  VariableDemo2.c  VariableDemo3.c  VariableDemo4.c
src/day03/: Radix.c  Radix2.c
src/day04/: CharDemo.c  DataTypeDemo1.c  DateTypeDemo2.c  DateTypeDemo3.c  DateTypeDemo4.c  DateTypeDemo5.c  IntTypeDemo.c  IntTypeDemo2.c  IntTypeDemo3.c  LongLongTypeDemo.c  LongLongTypeDemo2.c  LongLongTypeDemo3.c  LongTypeDemo.c  LongTypeDemo2.c  LongTypeDemo3.c  ShortTypeDemo.c  ShortTypeDemo2.c  ShortTypeDemo3.c  SizeOfDemo.c  SizeOfDemo2.c  SizeOfDemo3.c
src/day05/: BoolDemo1.c  BoolDemo2.c  BoolDemo3.c  BoolDemo4.c  CharDemo.c  CharDemo2.c  CharDemo3.c  DateTypeConvertDemo1.c  DateTypeConvertDemo2.c  DateTypeConvertDemo3.c  DateTypeConvertDemo4.c  DateTypeConvertDemo5.c  DoubleDemo1.c  FloatDemo.c  FloatDemo2.c  FloatDemo3.c  FloatDemo4.c  LongDoubleDemo1.c
src/day06/: AriDemo.c  AriDemo1.c  AriDemo2.c  AriDemo3.c  AriDemo4.c  AriDemo5.c  AssignDemo.c  BitDemo.c  CompareDemo.c  LogicDemo.c  LogicDemo2.c  LogicDemo3.c  SetValueDemo.c
src/day07/: BreakDemo1.c  BreakDemo2.c  ContinueDemo.c  DoWhileDemo.c  DoWhileDemo2.c  ForDemo1.c  ForDemo2.c  ForDemo3.c  ForDemo4.c  ForDemo5.c  ForForDemo1.c  ForForDemo2.c  ForForDemo3.c  ForForDemo4.c  ForForDemo5.c  IFDemo.c  IFDemo2.c  IFDemo3.c  IFDemo4.c  IFDemo5.c  IFDemo6.c  IFDemo7.c  IFDemo8.c  IFDemo9.c  SeqDemo.c  SwitchDemo1.c  SwitchDemo2.c  WhileDemo1.c  WhileDemo2.c  WhileDemo3.c  WhileDemo4.c  WhileDemo5.c
src/day08/: ArrayDemo1.c  ArrayDemo10.c  ArrayDemo11.c  ArrayDemo12.c  ArrayDemo13.c  ArrayDemo14.c  ArrayDemo15.c  ArrayDemo16.c  ArrayDemo17.c  ArrayDemo18.c  ArrayDemo19.c  ArrayDemo2.c  ArrayDemo20.c  ArrayDemo21.c  ArrayDemo22.c  ArrayDemo23.c  ArrayDemo24.c  ArrayDemo25.c  ArrayDemo3.c  ArrayDemo4.c  ArrayDemo5.c  ArrayDemo6.c  ArrayDemo7.c  ArrayDemo8.c  ArrayDemo9.c
src/day09/: FunDemo1.c  main.c
src/day09/include/: add.h  sub.h
src/day09/module/: add.c  sub.c
src/day10/: ArrayPointer.c  Pointer1.c  Pointer10.c  Pointer11.c  Pointer12.c  Pointer13.c  Pointer14.c  Pointer2.c  Pointer3.c  Pointer4.c  Pointer5.c  Pointer6.c  Pointer7.c  Pointer8.c  Pointer9.c  SearchDemo.c  StringPointer.c
src/day11/: Demo.c  Pointer1.c  Pointer10.c  Pointer11.c  Pointer2.c  Pointer3.c  Pointer4.c  Pointer5.c  Pointer6.c  Pointer7.c  Pointer8.c  Pointer9.c
src/day12/: FunctionDemo.c  FunctionDemo1.c  FunctionDemo2.c  StringDemo.c  VoidPointer.c  demo.c  demo2.c  demo3.c  demo4.c
src/day13/: Fun1.c  Fun10.c  Fun11.c  Fun12.c  Fun13.c  Fun2.c  Fun3.c  Fun4.c  Fun5.c  Fun6.c  Fun7.c  Fun8.c  Fun9.c  file1.c
src/day14/: Define1.c  Define2.c  Define3.c  Define4.c  Define5.c
src/day15/: Box.c  Cat.c  Contact.c  Employee.c  MultiNode.c  Person.c  SingleNode.c  Student.c
src/day16/: 01-malloc.c  Data.c  char1.c  demo.c  demo2.c  malloc1.c  math.c  math1.c  math2.c  math3.c  math4.c  math5.c  math6.c  math7.c  string1.c  time1.c  time2.c
src/day17/: main.c
src/day17/include/: vector.h
src/day17/module/: vector.c
src/day18/: main.c  strcat.c  strcpy.c  strlen.c  strlen_s.c  strncpy.c
src/day19/: free.c  free2.c  free3.c  free4.c  free5.c  linkedlist.c
src/day20/: file1.c  file2.c  file3.c  file4.c  file5.c  main.c
